--- a/public/stylesheets/sass/pages/artists.scss
+++ b/public/stylesheets/sass/pages/artists.scss
@@ -47,6 +47,9 @@
         #bio p {
           color: #ccc;
         }
+        #bio {
+          display: none;
+        }
       }
       #shop {
         ul.inline-list {
