forgot to add css class to associated artist links on artist detail page

--- a/app/views/artists/show.html.haml
+++ b/app/views/artists/show.html.haml
@@ -48,7 +48,7 @@
           %ul.inline-list
             - @artist.associated_artists.each do |artist|
               %li
-                = link_to(artist.name, artist)
+                = link_to(artist.name, artist, :class => 'box')
 
 .col-2
   .section
