hooks up home url in main menu nav

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
           = image_tag('logo.png', :alt => 'Search and Restore', :id => 'logo')
         %ul.nav
           %li
-            %a{:href => '#'} Home
+            %a{:href => root_path} Home
           %li#nav-shows
             %a{:href => '/home/shows'} Shows
           %li#nav-artists
