adds mailing list shared partial

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -4,26 +4,7 @@
 .col-1
   .section
     = image_tag('/images/about.png')
-  .section.snug
-    .container.skin-dark
-      .body
-        %h3 Join our mailing list.
-        - form_for :blah do |f|
-          %fieldset
-            .field.text
-              = f.label :name, 'Name:'
-              .wrapper
-                = f.text_field :name
-            .field.text
-              = f.label :email, 'Email:'
-              .wrapper
-                = f.text_field :email
-            .field.radio
-              = f.radio_button(:subscribe, 'yes')
-              = f.label(:subscribe_yes, 'Subscribe')
-            .field.radio
-              = f.radio_button(:subscribe, 'no')
-              = f.label(:subscribe_no, 'Unsubscribe')
+  = render :partial => 'shared/mailing_list'
 .col-2
   .container
     .body
