--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -24,3 +24,4 @@
       %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam faucibus sollicitudin turpis, congue mollis magna fermentum sed. Fusce rhoncus eleifend turpis ut rutrum. Vestibulum eros sapien, dapibus ac tempus tempus, adipiscing a augue. Nam lectus nulla, suscipit vitae auctor id, scelerisque non enim. 
 
       %a.box{:href => '#'} Learn more...
+= render :partial => 'shared/mailing_list'
