--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -6,6 +6,7 @@ $ORANGE: #ff9900;
 @import "components/lists";
 @import "components/headers";
 @import "components/layout";
+@import "pages/home";
 @import "pages/artists";
 @import "pages/about";
 @import "pages/shows";
