--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,27 +1,43 @@
-.section
-  .container.skin-dark
-    .body
-      %h3 2011 Undead Jazz Fest is Coming!!!
-      %p BOOM Collective and Search &amp; Restore bring back the Undead Jazzfest, expanded to 4-days, in 11 venues across 2 boroughs and featuring 50+ groups. June 23rd through 26th 2011 
-      %a.box{:href => '#'} www.undeadjazz.com
-.section
-  .container.skin-dark
-    .body
-      %ul.header-meta-list
-        - 3.times do |t|
-          %li
-            %h4 CHARLIE HUNTER DUO featuring BOBBY PREVITE, ADAM CRUZ, ERIC KALB, SHAWN PELTON
-            %p.byline 
-              %span.author Bowery Poetry Club, 9PM
-        %a.box{:href => '#'} See more shows...
-.section
-  .container.skin-dark
-    .body
-      %p Search And Restore is a 501(c)3 non-profit organization dedicated to developing and uniting the audience for new jazz music. We organize concerts and festivals, as well as this website which currently serves as a home for concert listings for the jazz scene in New York City. 
+- @page_class = 'layout-2 page-home'
 
-      %p Now, after an inspiring Kickstarter fundraiser for $75,000 , we're working on a new and improved website. Throughout 2011 we're going to film 200 concerts throughout the city, and a lot, lot more.
+.col-1-2
+  .section
+    .container.skin-dark
+      .body
+        %h3 2011 Undead Jazz Fest is Coming!!!
+        %p BOOM Collective and Search &amp; Restore bring back the Undead Jazzfest, expanded to 4-days, in 11 venues across 2 boroughs and featuring 50+ groups. June 23rd through 26th 2011 
+        %a.box{:href => '#'} www.undeadjazz.com
 
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam faucibus sollicitudin turpis, congue mollis magna fermentum sed. Fusce rhoncus eleifend turpis ut rutrum. Vestibulum eros sapien, dapibus ac tempus tempus, adipiscing a augue. Nam lectus nulla, suscipit vitae auctor id, scelerisque non enim. 
+  .col-1
+    .section
+      .container.skin-dark
+        .body
+          %ul.header-meta-list
+            - 3.times do |t|
+              %li
+                %h4 CHARLIE HUNTER DUO featuring BOBBY PREVITE, ADAM CRUZ, ERIC KALB, SHAWN PELTON
+                %p.byline 
+                  %span.author Bowery Poetry Club, 9PM
+            %a.box{:href => '#'} See more shows...
+  
+  .col-2
+    .section
+      .container
+        .body
+          Featured Video
+  .clear
 
-      %a.box{:href => '#'} Learn more...
-= render :partial => 'shared/mailing_list'
+.col-3
+  .section
+    .container.skin-dark
+      .body
+        %p Search And Restore is a 501(c)3 non-profit organization dedicated to developing and uniting the audience for new jazz music. We organize concerts and festivals, as well as this website which currently serves as a home for concert listings for the jazz scene in New York City. 
+  
+        %p Now, after an inspiring Kickstarter fundraiser for $75,000 , we're working on a new and improved website. Throughout 2011 we're going to film 200 concerts throughout the city, and a lot, lot more.
+  
+        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam faucibus sollicitudin turpis, congue mollis magna fermentum sed. Fusce rhoncus eleifend turpis ut rutrum. Vestibulum eros sapien, dapibus ac tempus tempus, adipiscing a augue. Nam lectus nulla, suscipit vitae auctor id, scelerisque non enim. 
+  
+        %a.box{:href => '#'} Learn more...
+  = render :partial => 'shared/mailing_list'
+
+.clear
