--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -205,6 +205,17 @@
   .jazz .media-with-info.large .info {
     padding-left: 172px; }
 
+.jazz.page-home p {
+  color: #ccc; }
+.jazz.page-home h3 {
+  margin-bottom: 5px; }
+.jazz.page-home .masthead {
+  background: url(/images/home/masthead_bg.png) repeat-x; }
+.jazz.page-home #exciting-news {
+  float: right;
+  width: 385px;
+  margin-bottom: 60px; }
+
 .jazz.section-artists .masthead-top {
   background-image: url(/images/titles/artists_title.png);
   background-position: 64px 5px; }
