--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -209,12 +209,20 @@
   color: #ccc; }
 .jazz.page-home h3 {
   margin-bottom: 5px; }
+.jazz.page-home .masthead-top {
+  background-image: url(/images/titles/home_title.png);
+  background-position: 10px 5px; }
 .jazz.page-home .masthead {
-  background: url(/images/home/masthead_bg.png) repeat-x; }
+  background: url(/images/home/masthead_bg.png) repeat-x;
+  margin-bottom: 0px; }
+.jazz.page-home #main-content {
+  background: url(/images/titles/home_title_bottom.png) no-repeat top left;
+  margin-top: 5px; }
 .jazz.page-home #exciting-news {
   float: right;
   width: 385px;
-  margin-bottom: 60px; }
+  margin-bottom: 60px;
+  margin-top: 20px; }
 
 .jazz.section-artists .masthead-top {
   background-image: url(/images/titles/artists_title.png);
