--- a/public/stylesheets/sass/pages/home.scss
+++ b/public/stylesheets/sass/pages/home.scss
@@ -6,13 +6,23 @@
     h3 {
       margin-bottom: 5px;   
     }
+    .masthead-top {
+       background-image: url(/images/titles/home_title.png);
+       background-position: 10px 5px;
+    }
     .masthead {
       background: url(/images/home/masthead_bg.png) repeat-x;
+      margin-bottom: 0px;
+    }
+    #main-content {
+      background: url(/images/titles/home_title_bottom.png) no-repeat top left;
+      margin-top: 5px;
     }
     #exciting-news {
       float: right;
       width: 385px; 
       margin-bottom: 60px;
+      margin-top: 20px;
     }
   }
 }
