--- a/public/stylesheets/sass/pages/home.scss
+++ b/public/stylesheets/sass/pages/home.scss
@@ -1,8 +1,5 @@
 .jazz {
   &.page-home {
-    p {
-      color: #ccc;
-    }
     h3 {
       margin-bottom: 5px;   
     }
@@ -23,6 +20,12 @@
       width: 385px; 
       margin-bottom: 60px;
       margin-top: 20px;
+    }
+    #featured-video .body {
+      padding: 5px;
+      .box.dark {
+        width: 290px;
+      }
     }
   }
 }
