--- a/public/stylesheets/pages/home.css
+++ b/public/stylesheets/pages/home.css
@@ -18,3 +18,5 @@
   padding: 5px; }
   .jazz.page-home #featured-video .body .box.dark {
     width: 290px; }
+.jazz.page-home #intro a.box {
+  width: 210px; }
