--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -89,6 +89,9 @@ h4 {
 .floatleft {
   float: left;
 }
+.floatright {
+  float: right;
+}
 .centered {
   text-align: center;
 }
@@ -179,4 +182,48 @@ body {
   .mr-20 {margin-right: 25px;}
   .mr-25 {margin-right: 5px;}
   .mr-30 {margin-right: 5px;}
+}
+
+
+#mailing-list {
+  .field {
+    margin-bottom: 5px;
+    label {
+      font-size: 12px;
+      color: #ccc;
+      font-weight: normal;
+    }
+    &.text {
+      label {
+        float: left;
+        margin-right: 5px;
+        padding-top: 3px;
+        width: 36px;
+      }
+      .wrapper {
+        width: 245px;
+        float: left;
+        input {
+          border: 1px solid #ccc;
+          height: 18px;
+          width: 245px;
+        }
+      }
+      clear: both;
+    }
+    &.radio {
+      overflow: hidden;
+      margin-right: 15px;
+      input,
+      .wrapper {
+        float: left;
+      }
+      .wrapper {
+        margin-left: 5px;
+      }
+      &.subscribe {
+        margin-left: 38px;
+      }
+    }
+  }
 }
