--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -55,4 +55,7 @@
         %a.box{:href => '#'} Learn more...
   = render :partial => 'shared/mailing_list'
 
+  .section.mt-5
+    %a.box.large{:href => '#'} Donate To Search &amp; Restore
+
 .clear
