--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -182,6 +182,13 @@ body {
   .mr-20 {margin-right: 25px;}
   .mr-25 {margin-right: 5px;}
   .mr-30 {margin-right: 5px;}
+
+  .mt-5 {margin-top: 5px;}
+  .mt-10 {margin-top: 10px;}
+  .mt-15 {margin-top: 15px;}
+  .mt-20 {margin-top: 25px;}
+  .mt-25 {margin-top: 5px;}
+  .mt-30 {margin-top: 5px;}
 }
 
 
