--- a/public/stylesheets/sass/components/links.scss
+++ b/public/stylesheets/sass/components/links.scss
@@ -15,5 +15,14 @@
       background-color: #000;
       text-transform: uppercase;
     }
+    &.large {
+      font-size: 12px;
+      font-weight: bold;
+      text-transform: uppercase;
+      line-height: 25px;
+      width: 100%;
+      text-align: center;
+      padding: 0px;
+    }
   }
 }
