--- a/app/views/home/venues_landing.html.haml
+++ b/app/views/home/venues_landing.html.haml
@@ -1,5 +1,16 @@
 - @page_class = 'layout-4 section-venues page-index'
 
+.searchy-inline
+  .floatleft#search-by-name.mr10
+    - form_for :blah do |f|
+      %fieldset
+        = f.label :name, 'Search Venues:', :class => 'box dark floatleft mr10 pr10 pl10'
+        .field.select.inline.mb5
+          = f.label :name, 'Name:'
+          .wrapper
+            = f.select :name, ['one','two','three']
+        = f.submit :search
+  .clear
 .col-1
   .container
     .body{:style => 'padding: 6px;'}
