artists search is searchy inline

--- a/app/views/artists/index.html.haml
+++ b/app/views/artists/index.html.haml
@@ -1,6 +1,6 @@
 - @page_class = 'section-artists page-index'
 
-.floatleft.mr10
+.floatleft.mr10.searchy-inline
   = form_for @artists, :url => artists_path, :html => { :method => :get } do |f|
     %fieldset
       %p.box.dark.floatleft.mr10.pr10.pl10 Search Artists By ...
