--- a/public/stylesheets/sass/components/forms.scss
+++ b/public/stylesheets/sass/components/forms.scss
@@ -15,9 +15,9 @@
     }  
     input[type='text'],
     input[type='password'] {
-      line-height: 25px;
+      line-height: 20px;
       font-size: 16px;
-      color: #ccc;
+      color: #000;
     }
     label,
     .control {
