all features pass with no warnings

--- a/app/views/shared/_mailing_list.html.haml
+++ b/app/views/shared/_mailing_list.html.haml
@@ -2,7 +2,7 @@
   .container.skin-dark
     .body
       %h3 Join our mailing list.
-      - form_for :blah do |f|
+      = form_for :blah do |f|
         %fieldset
           .field.text
             = f.label :name, 'Name:'
