--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -312,6 +312,11 @@
 .jazz.page-donate #main-content {
   height: 543px;
   background: url(/images/rats.png) no-repeat top left; }
+.jazz.page-donate h3.box {
+  font-size: 12px; }
+.jazz.page-donate .container.with-tip .body {
+  padding-top: 5px;
+  padding-bottom: 20px; }
 
 .jazz.page-resources .masthead-top {
   background-image: url(/images/titles/resources_title.png); }
