--- a/public/stylesheets/sass/pages/donate.scss
+++ b/public/stylesheets/sass/pages/donate.scss
@@ -7,5 +7,14 @@
       height: 543px;
       background: url(/images/rats.png) no-repeat top left;
     }
+    h3.box {
+      font-size: 12px;
+    }
+    .container.with-tip {
+      .body {
+        padding-top: 5px;
+        padding-bottom: 20px;
+      }
+    }
   }
 }
