venus map section not snug

--- a/app/views/home/venues.html.haml
+++ b/app/views/home/venues.html.haml
@@ -11,7 +11,7 @@
           .submit
             = f.submit :search
           .clear
-  .section.snug
+  .section
     #map_canvas{:style => "width: 310px; height: 387px"}
   .section.snug
     .container.skin-dark
