changes padding in video box

--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -235,3 +235,12 @@ body {
     }
   }
 }
+
+#video-player-container {
+  p {
+    margin-bottom: 8px;
+  }
+  h3 {
+    margin-bottom: 4px;
+  }
+}
