--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -273,8 +273,13 @@
 .jazz.section-artists.page-show #info .body {
   position: relative;
   padding-bottom: 26px; }
+.jazz.section-artists.page-show #info h3.name {
+  margin-bottom: 1px;
+  text-transform: uppercase;
+  color: #fff; }
 .jazz.section-artists.page-show #info p.instrument {
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+  color: #666; }
 .jazz.section-artists.page-show #info a.box {
   width: 125px;
   position: absolute;
@@ -294,9 +299,6 @@
   display: none; }
 .jazz.section-artists.page-show #shop ul.inline-list li {
   margin-right: 10px; }
-  .jazz.section-artists.page-show #shop ul.inline-list li a {
-    display: block;
-    width: 69px; }
 
 .jazz.page-about .masthead-top {
   background-image: url(/images/titles/about_title.png); }
@@ -724,6 +726,9 @@ body.page-donate .nav li#nav-donate a {
       margin-left: 38px; }
 
 #video-player-container p {
-  margin-bottom: 8px; }
+  margin-bottom: 6px; }
 #video-player-container h3 {
   margin-bottom: 4px; }
+#video-player-container a.venue-link {
+  color: #666;
+  text-decoration: none; }
